--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -118,26 +118,39 @@
     "# Extract z coords from raster\n",
     "z_start = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"start_point_geom\"], x_coords=\"x\",y_coords=\"y\")\n",
     "\n",
+    "# Convert do gpd\n",
+    "z_start = z_start.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
+    "\n",
+    "# Append z values to points\n",
+    "z_start[\"start_point_3d\"] = z_start.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
+    "z_start = z_start.drop(columns=[\"geometry\", \"z\"])\n",
+    "\n",
+    "\n",
+    "\n",
     "# Extract z coords from raster\n",
-    "z_end = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"end_point_geom\"], x_coords=\"x\",y_coords=\"y\")"
+    "z_end = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=sightlines[\"end_point_geom\"], x_coords=\"x\",y_coords=\"y\")\n",
+    "\n",
+    "# Convert do gpd\n",
+    "z_end = z_end.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
+    "\n",
+    "# Append z values to points\n",
+    "z_end[\"end_point_3d\"] = z_end.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
+    "z_end = z_end.drop(columns=[\"geometry\", \"z\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "8f119e3c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO\n",
-    "# This is waayy to complicated. Should be reworked\n",
-    "\n",
-    "new_gdf = gpd.GeoDataFrame(columns=['geometry'], geometry='geometry')\n",
+    "z_points_list = []\n",
     "\n",
     "for row in sightlines[\"sl_points\"]:\n",
     "    if row is not None:\n",
     "        points = row.geoms\n",
-    "        \n",
+    "\n",
     "        z_points = raster.drop_vars(\"spatial_ref\").xvec.extract_points(points=points, x_coords=\"x\",y_coords=\"y\")\n",
     "        z_points = z_points.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
     "\n",
@@ -145,13 +158,11 @@
     "        z_points = z_points.drop(columns=\"z\")\n",
     "        \n",
     "        multipoint = MultiPoint(z_points[\"geometry\"].tolist())\n",
-    "        \n",
-    "        row_gdf = gpd.GeoDataFrame({'geometry': [multipoint]}, geometry='geometry')\n",
     "\n",
-    "        new_gdf = pd.concat([new_gdf, row_gdf], ignore_index=True)\n",
     "    else:\n",
-    "        new_row = gpd.GeoDataFrame({'geometry': [None]}, geometry='geometry')\n",
-    "        new_gdf = pd.concat([new_gdf, new_row], ignore_index=True)"
+    "        multipoint = None\n",
+    "\n",
+    "    z_points_list.append(multipoint)"
    ]
   },
   {
@@ -164,194 +175,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "cf9ced4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Convert do gpd\n",
-    "z_start = z_start.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
-    "\n",
-    "# Append z values to points\n",
-    "z_start[\"start_point_3d\"] = z_start.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
-    "z_start = z_start.drop(columns=[\"geometry\", \"z\"])\n",
-    "\n",
-    "# Convert do gpd\n",
-    "z_end = z_end.xvec.to_geopandas().rename(columns={0: \"z\"})\n",
-    "\n",
-    "# Append z values to points\n",
-    "z_end[\"end_point_3d\"] = z_end.apply(lambda row: Point(row[\"geometry\"].x, row[\"geometry\"].y, row[\"z\"]), axis=1)\n",
-    "z_end = z_end.drop(columns=[\"geometry\", \"z\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "id": "2f8f8ff1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sightlines = pd.concat([z_start, z_end, new_gdf], axis=1)\n",
+    "sightlines = pd.concat([z_start, z_end], axis=1)\n",
     "\n",
     "sightlines = sightlines.rename(columns={\"start_point_3d\": \"sl_start\",\n",
-    "                                          \"end_point_3d\": \"sl_end\",\n",
-    "                                          \"geometry\": \"sl_points\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "415b6fe2",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>sl_start</th>\n",
-       "      <th>sl_end</th>\n",
-       "      <th>sl_points</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>POINT Z (1025242.3 6281649.6 23.08)</td>\n",
-       "      <td>POINT Z (1025315.3 6281625.6 24.3)</td>\n",
-       "      <td>MULTIPOINT Z ((1025242.675 6281649.27 23.39), ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>POINT Z (1025177.5 6281541.1 20.18)</td>\n",
-       "      <td>POINT Z (1025169 6281448.7 21.75)</td>\n",
-       "      <td>MULTIPOINT Z ((1025177.597 6281540.609 20.18),...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>POINT Z (1025424.8 6281581.9 30.91)</td>\n",
-       "      <td>POINT Z (1025442.8 6281622 33.38)</td>\n",
-       "      <td>MULTIPOINT Z ((1025425.005 6281582.356 30.91),...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>POINT Z (1025476 6281507.8 33.53)</td>\n",
-       "      <td>POINT Z (1025538.1 6281459.3 37.83)</td>\n",
-       "      <td>MULTIPOINT Z ((1025475.934 6281507.304 33.53),...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>POINT Z (1025216 6281670.9 21.13)</td>\n",
-       "      <td>POINT Z (1025187.8 6281695.8 21.19)</td>\n",
-       "      <td>MULTIPOINT Z ((1025215.613 6281671.217 21.13),...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2162</th>\n",
-       "      <td>POINT Z (1023809.4 6283978.1 168.65)</td>\n",
-       "      <td>POINT Z (1023826.5 6283991.1 168.57)</td>\n",
-       "      <td>MULTIPOINT Z ((1023809.828 6283978.359 168.65)...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2163</th>\n",
-       "      <td>POINT Z (1023996.4 6283819.8 179.95)</td>\n",
-       "      <td>POINT Z (1023991 6283832.7 178.71)</td>\n",
-       "      <td>MULTIPOINT Z ((1023996.284 6283820.286 179.95)...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2164</th>\n",
-       "      <td>POINT Z (1024115.3 6284174.2 187.49)</td>\n",
-       "      <td>POINT Z (1024132.5 6284154 183.36)</td>\n",
-       "      <td>MULTIPOINT Z ((1024115.618 6284173.814 187.49)...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2165</th>\n",
-       "      <td>POINT Z (1024139.6 6284146.3 178.36)</td>\n",
-       "      <td>POINT Z (1024213.6 6284091.4 168.23)</td>\n",
-       "      <td>MULTIPOINT Z ((1024139.947 6284145.94 178.36),...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2166</th>\n",
-       "      <td>POINT Z (1023826.5 6283991.1 168.57)</td>\n",
-       "      <td>POINT Z (1023852.9 6284060.7 167.58)</td>\n",
-       "      <td>MULTIPOINT Z ((1023826.661 6283991.573 168.57)...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2167 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  sl_start  \\\n",
-       "0      POINT Z (1025242.3 6281649.6 23.08)   \n",
-       "1      POINT Z (1025177.5 6281541.1 20.18)   \n",
-       "2      POINT Z (1025424.8 6281581.9 30.91)   \n",
-       "3        POINT Z (1025476 6281507.8 33.53)   \n",
-       "4        POINT Z (1025216 6281670.9 21.13)   \n",
-       "...                                    ...   \n",
-       "2162  POINT Z (1023809.4 6283978.1 168.65)   \n",
-       "2163  POINT Z (1023996.4 6283819.8 179.95)   \n",
-       "2164  POINT Z (1024115.3 6284174.2 187.49)   \n",
-       "2165  POINT Z (1024139.6 6284146.3 178.36)   \n",
-       "2166  POINT Z (1023826.5 6283991.1 168.57)   \n",
-       "\n",
-       "                                    sl_end  \\\n",
-       "0       POINT Z (1025315.3 6281625.6 24.3)   \n",
-       "1        POINT Z (1025169 6281448.7 21.75)   \n",
-       "2        POINT Z (1025442.8 6281622 33.38)   \n",
-       "3      POINT Z (1025538.1 6281459.3 37.83)   \n",
-       "4      POINT Z (1025187.8 6281695.8 21.19)   \n",
-       "...                                    ...   \n",
-       "2162  POINT Z (1023826.5 6283991.1 168.57)   \n",
-       "2163    POINT Z (1023991 6283832.7 178.71)   \n",
-       "2164    POINT Z (1024132.5 6284154 183.36)   \n",
-       "2165  POINT Z (1024213.6 6284091.4 168.23)   \n",
-       "2166  POINT Z (1023852.9 6284060.7 167.58)   \n",
-       "\n",
-       "                                              sl_points  \n",
-       "0     MULTIPOINT Z ((1025242.675 6281649.27 23.39), ...  \n",
-       "1     MULTIPOINT Z ((1025177.597 6281540.609 20.18),...  \n",
-       "2     MULTIPOINT Z ((1025425.005 6281582.356 30.91),...  \n",
-       "3     MULTIPOINT Z ((1025475.934 6281507.304 33.53),...  \n",
-       "4     MULTIPOINT Z ((1025215.613 6281671.217 21.13),...  \n",
-       "...                                                 ...  \n",
-       "2162  MULTIPOINT Z ((1023809.828 6283978.359 168.65)...  \n",
-       "2163  MULTIPOINT Z ((1023996.284 6283820.286 179.95)...  \n",
-       "2164  MULTIPOINT Z ((1024115.618 6284173.814 187.49)...  \n",
-       "2165  MULTIPOINT Z ((1024139.947 6284145.94 178.36),...  \n",
-       "2166  MULTIPOINT Z ((1023826.661 6283991.573 168.57)...  \n",
-       "\n",
-       "[2167 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sightlines"
+    "                                          \"end_point_3d\": \"sl_end\"})\n",
+    "\n",
+    "sightlines[\"sl_points\"] = z_points_list"
    ]
   },
   {
@@ -365,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
@@ -444,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "id": "563729ab",
    "metadata": {},
    "outputs": [],
@@ -469,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "id": "3fb51854",
    "metadata": {},
    "outputs": [
@@ -600,7 +434,7 @@
        "[2167 rows x 4 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
