--- a/03_sightlines_dtm.ipynb
+++ b/03_sightlines_dtm.ipynb
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "8f119e3c",
    "metadata": {},
    "outputs": [],
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "2f8f8ff1",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "de597a50",
    "metadata": {},
    "outputs": [],
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "563729ab",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "3fb51854",
    "metadata": {},
    "outputs": [
@@ -434,13 +434,23 @@
        "[2167 rows x 4 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_slopes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "5077645c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_slopes.to_parquet(\"my_results/method_3/d06_dtm_result.parquet\")"
    ]
   }
  ],
