keep list of lists as data

--- a/example.ipynb
+++ b/example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,34 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['uid', 'sight_line_points', 'left_OS_count', 'left_OS', 'left_SB_count',\n",
-       "       'left_SB', 'left_H', 'left_HW', 'left_BUILT_COVERAGE',\n",
-       "       'left_SEQ_SB_ids', 'left_SEQ_SB_categories', 'right_OS_count',\n",
-       "       'right_OS', 'right_SB_count', 'right_SB', 'right_H', 'right_HW',\n",
-       "       'right_BUILT_COVERAGE', 'right_SEQ_SB_ids', 'right_SEQ_SB_categories',\n",
-       "       'front_SB', 'back_SB', 'left_SEQ_OS_endpoints',\n",
-       "       'right_SEQ_OS_endpoints'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "sc.sightline_df.columns"
+    "df = sc.sightline_df()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +76,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -110,7 +92,7 @@
     }
    ],
    "source": [
-    "ax = sc.streets.plot(sc.sightline_df.left_OS.apply(np.mean).values, legend=True)\n",
+    "ax = sc.streets.plot(df.left_OS.apply(np.mean).values, legend=True)\n",
     "buildings.plot(ax=ax)"
    ]
   },
