--- a/example.ipynb
+++ b/example.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sc = StreetScape(streets, buildings)"
+    "sc = Streetscape(streets, buildings)"
    ]
   },
   {
