--- a/example.ipynb
+++ b/example.ipynb
@@ -14,7 +14,7 @@
     "import rioxarray\n",
     "import xvec\n",
     "\n",
-    "from streetscape import StreetScape"
+    "from streetscape import Streetscape"
    ]
   },
   {
@@ -39,72 +39,6 @@
     "streets = gpd.read_file(\"bubenec.gpkg\", layer=\"streets\").to_crs(5514)\n",
     "buildings = gpd.read_file(\"bubenec.gpkg\", layer=\"buildings\").to_crs(5514)\n",
     "plots = gpd.read_file(\"bubenec.gpkg\", layer=\"plots\").to_crs(5514)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>geometry_type</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>plots</td>\n",
-       "      <td>Polygon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>streets</td>\n",
-       "      <td>LineString</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>buildings</td>\n",
-       "      <td>Polygon</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        name geometry_type\n",
-       "0      plots       Polygon\n",
-       "1    streets    LineString\n",
-       "2  buildings       Polygon"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gpd.list_layers(\"bubenec.gpkg\")"
    ]
   },
   {
@@ -781,6 +715,41 @@
    "source": [
     "street_df = sc.street_indicators\n",
     "street_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['N', 'n_l', 'n_r', 'left_OS', 'right_OS', 'OS', 'left_OS_STD',\n",
+       "       'right_OS_STD', 'OS_STD', 'left_OS_MAD', 'right_OS_MAD', 'OS_MAD',\n",
+       "       'left_OS_med', 'right_OS_med', 'OS_med', 'left_OS_MAD_med',\n",
+       "       'right_OS_MAD_med', 'OS_MAD_med', 'left_SB', 'right_SB', 'SB',\n",
+       "       'left_SB_STD', 'right_SB_STD', 'SB_STD', 'left_SB_MAD', 'right_SB_MAD',\n",
+       "       'SB_MAD', 'left_SB_med', 'right_SB_med', 'SB_med', 'left_SB_MAD_med',\n",
+       "       'right_SB_MAD_med', 'SB_MAD_med', 'left_H', 'right_H', 'H',\n",
+       "       'left_H_STD', 'right_H_STD', 'H_STD', 'left_HW', 'right_HW', 'HW',\n",
+       "       'left_HW_STD', 'right_HW_STD', 'HW_STD', 'csosva', 'tan', 'tan_STD',\n",
+       "       'n_tan_ratio', 'tan_ratio', 'tan_ratio_STD', 'par_tot', 'par_rel',\n",
+       "       'left_par_tot', 'right_par_tot', 'left_par_rel', 'right_par_rel',\n",
+       "       'par_tot_15', 'par_rel_15', 'left_par_tot_15', 'right_par_tot_15',\n",
+       "       'left_par_rel_15', 'right_par_rel_15', 'left_built_freq',\n",
+       "       'right_built_freq', 'built_freq', 'left_built_coverage',\n",
+       "       'right_built_coverage', 'built_coverage'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "street_df.columns"
    ]
   },
   {
