--- a/example.ipynb
+++ b/example.ipynb
@@ -159,11 +159,11 @@
        "      <th>OS_STD</th>\n",
        "      <th>left_OS_MAD</th>\n",
        "      <th>...</th>\n",
-       "      <th>building_prevalence[1]</th>\n",
-       "      <th>building_prevalence[2]</th>\n",
-       "      <th>building_prevalence[3]</th>\n",
-       "      <th>building_prevalence[4]</th>\n",
-       "      <th>building_prevalence[5]</th>\n",
+       "      <th>left_plot_WD_ratio</th>\n",
+       "      <th>right_plot_WD_ratio</th>\n",
+       "      <th>plot_WP_ratio</th>\n",
+       "      <th>left_plot_WP_ratio</th>\n",
+       "      <th>right_plot_WP_ratio</th>\n",
        "      <th>slope_degree</th>\n",
        "      <th>slope_percent</th>\n",
        "      <th>n_slopes</th>\n",
@@ -209,11 +209,11 @@
        "      <td>13.436283</td>\n",
        "      <td>13.873261</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.090909</td>\n",
-       "      <td>0.212121</td>\n",
-       "      <td>0.075758</td>\n",
-       "      <td>0.121212</td>\n",
-       "      <td>0.318182</td>\n",
+       "      <td>1.156838</td>\n",
+       "      <td>1.765677</td>\n",
+       "      <td>0.170662</td>\n",
+       "      <td>0.156054</td>\n",
+       "      <td>0.184501</td>\n",
        "      <td>2.809318</td>\n",
        "      <td>0.049073</td>\n",
        "      <td>57</td>\n",
@@ -233,11 +233,11 @@
        "      <td>9.794670</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.263158</td>\n",
-       "      <td>0.368421</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.368421</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.440018</td>\n",
+       "      <td>1.037328</td>\n",
+       "      <td>0.255912</td>\n",
+       "      <td>0.284263</td>\n",
+       "      <td>0.230261</td>\n",
        "      <td>0.166605</td>\n",
        "      <td>0.002908</td>\n",
        "      <td>22</td>\n",
@@ -257,11 +257,11 @@
        "      <td>15.613165</td>\n",
        "      <td>11.913767</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.175439</td>\n",
-       "      <td>0.210526</td>\n",
-       "      <td>0.105263</td>\n",
-       "      <td>0.157895</td>\n",
-       "      <td>0.105263</td>\n",
+       "      <td>0.822478</td>\n",
+       "      <td>1.635139</td>\n",
+       "      <td>0.200568</td>\n",
+       "      <td>0.221176</td>\n",
+       "      <td>0.181546</td>\n",
        "      <td>1.122029</td>\n",
        "      <td>0.019587</td>\n",
        "      <td>43</td>\n",
@@ -281,11 +281,11 @@
        "      <td>2.869002</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.444736</td>\n",
+       "      <td>1.307648</td>\n",
+       "      <td>0.156703</td>\n",
+       "      <td>0.060853</td>\n",
+       "      <td>0.248559</td>\n",
        "      <td>2.735747</td>\n",
        "      <td>0.047794</td>\n",
        "      <td>24</td>\n",
@@ -305,11 +305,11 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0.000000</td>\n",
+       "      <td>1.023312</td>\n",
+       "      <td>0.842487</td>\n",
+       "      <td>0.068937</td>\n",
+       "      <td>0.050164</td>\n",
+       "      <td>0.058499</td>\n",
        "      <td>1.505840</td>\n",
        "      <td>0.026294</td>\n",
        "      <td>15</td>\n",
@@ -318,7 +318,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 85 columns</p>\n",
+       "<p>5 rows × 102 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -330,37 +330,29 @@
        "3             24    0    0  50.000000  48.865531   98.865531     0.000000   \n",
        "4             15    0    0  50.000000  50.000000  100.000000     0.000000   \n",
        "\n",
-       "              right_OS_STD     OS_STD  left_OS_MAD  ...  \\\n",
-       "street_index                                        ...   \n",
-       "0                12.059253  13.436283    13.873261  ...   \n",
-       "1                14.015687   9.794670     0.000000  ...   \n",
-       "2                15.188099  15.613165    11.913767  ...   \n",
-       "3                 4.101247   2.869002     0.000000  ...   \n",
-       "4                 0.000000   0.000000     0.000000  ...   \n",
+       "              right_OS_STD     OS_STD  left_OS_MAD  ...  left_plot_WD_ratio  \\\n",
+       "street_index                                        ...                       \n",
+       "0                12.059253  13.436283    13.873261  ...            1.156838   \n",
+       "1                14.015687   9.794670     0.000000  ...            1.440018   \n",
+       "2                15.188099  15.613165    11.913767  ...            0.822478   \n",
+       "3                 4.101247   2.869002     0.000000  ...            1.444736   \n",
+       "4                 0.000000   0.000000     0.000000  ...            1.023312   \n",
        "\n",
-       "              building_prevalence[1]  building_prevalence[2]  \\\n",
-       "street_index                                                   \n",
-       "0                           0.090909                0.212121   \n",
-       "1                           0.263158                0.368421   \n",
-       "2                           0.175439                0.210526   \n",
-       "3                           0.000000                0.000000   \n",
-       "4                           0.000000                0.000000   \n",
+       "              right_plot_WD_ratio  plot_WP_ratio  left_plot_WP_ratio  \\\n",
+       "street_index                                                           \n",
+       "0                        1.765677       0.170662            0.156054   \n",
+       "1                        1.037328       0.255912            0.284263   \n",
+       "2                        1.635139       0.200568            0.221176   \n",
+       "3                        1.307648       0.156703            0.060853   \n",
+       "4                        0.842487       0.068937            0.050164   \n",
        "\n",
-       "              building_prevalence[3]  building_prevalence[4]  \\\n",
-       "street_index                                                   \n",
-       "0                           0.075758                0.121212   \n",
-       "1                           0.000000                0.368421   \n",
-       "2                           0.105263                0.157895   \n",
-       "3                           0.000000                0.000000   \n",
-       "4                           0.000000                0.000000   \n",
-       "\n",
-       "              building_prevalence[5]  slope_degree  slope_percent  n_slopes  \\\n",
-       "street_index                                                                  \n",
-       "0                           0.318182      2.809318       0.049073        57   \n",
-       "1                           0.000000      0.166605       0.002908        22   \n",
-       "2                           0.105263      1.122029       0.019587        43   \n",
-       "3                           0.000000      2.735747       0.047794        24   \n",
-       "4                           0.000000      1.505840       0.026294        15   \n",
+       "              right_plot_WP_ratio  slope_degree  slope_percent  n_slopes  \\\n",
+       "street_index                                                               \n",
+       "0                        0.184501      2.809318       0.049073        57   \n",
+       "1                        0.230261      0.166605       0.002908        22   \n",
+       "2                        0.181546      1.122029       0.019587        43   \n",
+       "3                        0.248559      2.735747       0.047794        24   \n",
+       "4                        0.058499      1.505840       0.026294        15   \n",
        "\n",
        "              slope_valid                                           geometry  \n",
        "street_index                                                                  \n",
@@ -370,7 +362,7 @@
        "3                    True  LINESTRING (-743618.342 -1040934.607, -743621....  \n",
        "4                    True  LINESTRING (-743701.515 -1040870.813, -743693....  \n",
        "\n",
-       "[5 rows x 85 columns]"
+       "[5 rows x 102 columns]"
       ]
      },
      "execution_count": 7,
@@ -392,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +393,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -570,8 +562,8 @@
        "      <td>38.796723</td>\n",
        "      <td>1</td>\n",
        "      <td>27.593446</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.942253</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.014734</td>\n",
        "      <td>2.491801</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -594,8 +586,8 @@
        "      <td>38.114846</td>\n",
        "      <td>1</td>\n",
        "      <td>26.229691</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.991243</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.067493</td>\n",
        "      <td>5.604209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -618,8 +610,8 @@
        "      <td>37.706231</td>\n",
        "      <td>1</td>\n",
        "      <td>25.412462</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.023120</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.101822</td>\n",
        "      <td>6.825341</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -642,8 +634,8 @@
        "      <td>24.588764</td>\n",
        "      <td>1</td>\n",
        "      <td>25.198986</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>1.031788</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.111156</td>\n",
        "      <td>11.811294</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -666,8 +658,8 @@
        "      <td>20.742455</td>\n",
        "      <td>1</td>\n",
        "      <td>26.764536</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.971435</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>1.046160</td>\n",
        "      <td>16.722367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -690,8 +682,8 @@
        "      <td>21.444652</td>\n",
        "      <td>1</td>\n",
        "      <td>28.184169</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.922504</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.993466</td>\n",
        "      <td>15.669026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -714,8 +706,8 @@
        "      <td>22.325652</td>\n",
        "      <td>1</td>\n",
        "      <td>29.961410</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.867783</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.934535</td>\n",
        "      <td>13.593521</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -738,8 +730,8 @@
        "      <td>23.015854</td>\n",
        "      <td>1</td>\n",
        "      <td>31.357056</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0.829159</td>\n",
+       "      <td>28.0</td>\n",
+       "      <td>0.892941</td>\n",
        "      <td>13.355549</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -791,27 +783,27 @@
        "street_index                                                            \n",
        "0               300.0         2  50.000000         0        NaN   NaN   \n",
        "0               300.0         2  50.000000         0        NaN   NaN   \n",
-       "0               300.0         2  38.796723         1  27.593446  26.0   \n",
-       "0               300.0         2  38.114846         1  26.229691  26.0   \n",
-       "0               300.0         2  37.706231         1  25.412462  26.0   \n",
-       "0               300.0         2  24.588764         1  25.198986  26.0   \n",
-       "0               300.0         2  20.742455         1  26.764536  26.0   \n",
-       "0               300.0         2  21.444652         1  28.184169  26.0   \n",
-       "0               300.0         2  22.325652         1  29.961410  26.0   \n",
-       "0               300.0         2  23.015854         1  31.357056  26.0   \n",
+       "0               300.0         2  38.796723         1  27.593446  28.0   \n",
+       "0               300.0         2  38.114846         1  26.229691  28.0   \n",
+       "0               300.0         2  37.706231         1  25.412462  28.0   \n",
+       "0               300.0         2  24.588764         1  25.198986  28.0   \n",
+       "0               300.0         2  20.742455         1  26.764536  28.0   \n",
+       "0               300.0         2  21.444652         1  28.184169  28.0   \n",
+       "0               300.0         2  22.325652         1  29.961410  28.0   \n",
+       "0               300.0         2  23.015854         1  31.357056  28.0   \n",
        "\n",
        "                    HW  BUILT_COVERAGE  \n",
        "street_index                            \n",
        "0                  NaN        0.000000  \n",
        "0                  NaN        0.000000  \n",
-       "0             0.942253        2.491801  \n",
-       "0             0.991243        5.604209  \n",
-       "0             1.023120        6.825341  \n",
-       "0             1.031788       11.811294  \n",
-       "0             0.971435       16.722367  \n",
-       "0             0.922504       15.669026  \n",
-       "0             0.867783       13.593521  \n",
-       "0             0.829159       13.355549  \n",
+       "0             1.014734        2.491801  \n",
+       "0             1.067493        5.604209  \n",
+       "0             1.101822        6.825341  \n",
+       "0             1.111156       11.811294  \n",
+       "0             1.046160       16.722367  \n",
+       "0             0.993466       15.669026  \n",
+       "0             0.934535       13.593521  \n",
+       "0             0.892941       13.355549  \n",
        "\n",
        "[10 rows x 24 columns]"
       ]
@@ -835,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +836,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -863,13 +855,6 @@
     "ax = point_df.plot(\"OS\", figsize=(12, 12), legend=True, markersize=5)\n",
     "buildings.plot(ax=ax)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
